--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section id="header">
     <div class="container text-center">
     <div class="user-box">
-    <img src="D:\Ananya Newton\img\ananya.JPG">
+    <img src=".\Ananya Newton\img\ananya.JPG">
     <h1>Ananya Tripathi</h1>
     <p>Software Developer</p>
     </div>
