--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section id="header">
     <div class="container text-center">
     <div class="user-box">
-    <img src=".\Ananya Newton\img\ananya.JPG">
+    <img src="images\ananya.JPG">
     <h1>Ananya Tripathi</h1>
     <p>Software Developer</p>
     </div>
@@ -33,7 +33,7 @@
 
       <div class="nav-bar">
         <nav class="navbar navbar-expand-lg ">
-            <a class="navbar-brand" href="#"><img src="D:\Ananya Newton\img\logo1234.JPG"></a>
+            <a class="navbar-brand" href="#"><img src="images\logo1234.JPG"></a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-
               expanded="false" aria-label="Toggle navigation">
                 <i class="fa fa-bars"></i>
@@ -62,7 +62,7 @@
 <div class="about container" id="about">
   <div class="row">
     <div class= "col-md-6 text-center">
-      <img src="D:\Ananya Newton\img\ananya3.jpg" class="profile-img">
+      <img src="images\ananya3.jpg" class="profile-img">
       </div>
       <div class="col-md-6">
         <h3>Who am I?</h3>
